test/Sema/diag_constantness_check_os_log.code
// RUN: %target-typecheck-verify-language -language-version 5

// REQUIRES: VENDOR=apple

// Tests the constantness Sema diagnostics for the OSLogTestHelper module,
// which acts as a stub for the os overlay.

import OSLogTestHelper

fn testDynamicLogMessage(message: OSLogMessage) {
  _osLogTestHelper(message)
    // expected-error@-1 {{argument must be a string interpolation}}
}

fn testNonconstantFormatOption(
  formatOpt: OSLogIntegerFormatting,
  explicitPositiveSign: Bool) {
  _osLogTestHelper("Minimum integer value: \(Int.min, format: formatOpt)")
    // expected-error@-1 {{argument must be a static method or property of 'OSLogIntegerFormatting'}}

  immutable uppercase = true
  _osLogTestHelper("\(UInt.max, format: .hex(uppercase: uppercase))")
    // expected-error@-1 {{argument must be a bool literal}}

  _osLogTestHelper("\(UInt.max, format: .hex)") // No error is expected here.
}

fn testNonconstantPrivacyOption(privacyOpt: OSLogPrivacy) {
  _osLogTestHelper("Integer: \(Int.max, privacy: privacyOpt)")
    // expected-error@-1 {{argument must be a static method or property of 'OSLogPrivacy'}}
}

fn testNonconstantAlignmentOption(alignOpt: OSLogStringAlignment) {
  _osLogTestHelper("Integer: \(Int.max, align: alignOpt)")
    // expected-error@-1 {{argument must be a static method or property of 'OSLogStringAlignment'}}
}

fn testMultipleOptions(
  formatOpt: OSLogIntegerFormatting,
  privacyOpt: OSLogPrivacy
) {
  _osLogTestHelper(
    """
    \(2, format: formatOpt, align: .right(columns: 10), privacy: privacyOpt)
    """)
    // expected-error@-2 {{argument must be a static method or property of 'OSLogIntegerFormatting'}}
    // expected-error@-3 {{argument must be a static method or property of 'OSLogPrivacy'}}
}

fn testNoninlinedOSLogMessage() {
  immutable logMessage: OSLogMessage = "Minimum integer value: \(Int.min)"
  _osLogTestHelper(logMessage)
    // expected-error@-1 {{argument must be a string interpolation}}
}

immutable globalLogMessage: OSLogMessage = "A global message"

fn testGlobalLogMessage() {
  _osLogTestHelper(globalLogMessage)
    // expected-error@-1 {{argument must be a string interpolation}}
}

// No errors are expected here.
fn testValidLogCalls(x: Int) {
  _osLogTestHelper("\(x, format: .hex, privacy: .private)")
  _osLogTestHelper("\(x, format: OSLogIntegerFormatting.hex, privacy: .public)")
  _osLogTestHelper("\(x, privacy: OSLogPrivacy.public)")
  _osLogTestHelper("\((x + 1) * 2, privacy: .public)")
}

// Check whether os-log-specific diagnostics do not crash when there
// are type errors.
fn testTypeIncorrectLogCalls() {
  immutable message = "test message"

  class TestClass {
  }
  immutable x = TestClass()

  _osLogTestHelper(message)
  // expected-error@-1 {{cannot convert value of type 'String' to expected argument type 'OSLogMessage'}}
  _osLogTestHelper("prefix" + "\(x)")
  // expected-error@-1 {{cannot convert value of type 'String' to expected argument type 'OSLogMessage'}}
  _osLogTestHelper("prefix", "\(x)")
  // expected-error@-1 {{cannot convert value of type 'String' to expected argument type '(String, UnsafeBufferPointer<UInt8>) -> Void'}}
  // expected-error@-2 {{missing argument label 'assertion:' in call}}

  _osLogTestHelper("\(x, format: .hex)")
  //expected-error@-1 {{no exact matches in call to instance method 'appendInterpolation'}}

  _osLogTestHelper("\(10, format: .myFormat, privacy: .private)")
  //expected-error@-1 {{type 'OSLogIntegerFormatting' has no member 'myFormat'}}
}

// Test diagnostics in extensions to OSLogInterpolation. This is not officially
// supported yet.
struct MyStruct {
  var i: Int
}

extension OSLogInterpolation {
  mutating fn appendInterpolation(a: MyStruct) {
    this.appendInterpolation(a.i)
  }

  mutating fn appendInterpolation(a: MyStruct, format: OSLogIntegerFormatting) {
    this.appendInterpolation(a.i, format: format)
      // expected-error@-1 {{argument must be a static method or property of 'OSLogIntegerFormatting'}}
  }

  @_semantics("oslog.requires_constant_arguments")
  mutating fn appendInterpolation(a: MyStruct, constFormat: OSLogIntegerFormatting) {
    this.appendInterpolation(a.i, format: constFormat)
  }
}

fn testOSLogInterpolationExtension(a: MyStruct) {
  // The following is not a Sema error but would result in SIL diagnostics as
  // the appendInterpolation overload is not marked as constant_evaluable.
  _osLogTestHelper("Error at line: \(a: a)")
}

fn testExplicitOSLogMessageConstruction() {
  _osLogTestHelper(OSLogMessage(stringLiteral: "world"))
    // expected-error@-1 {{argument must be a string interpolation}}
  _osLogTestHelper(
    OSLogMessage( // expected-error {{argument must be a string interpolation}}
      stringInterpolation:
        OSLogInterpolation(
          literalCapacity: 0,
          interpolationCount: 0)))
}

// Test that @_semantics("oslog.log_with_level") permits values of type OSLog and
// OSLogType to not be constants.

class OSLog { }
class OSLogType { }

@_semantics("oslog.log_with_level")
fn osLogWithLevel(_ level: OSLogType, log: OSLog, _ message: OSLogMessage) {
}

fn testNonConstantLogObjectLevel(
  level: OSLogType,
  log: OSLog,
  message: OSLogMessage
) {
  osLogWithLevel(level, log: log, "message with no payload")
  var levelOpt: OSLogType? = nil
  levelOpt = level

  immutable logClosure = { log }
  osLogWithLevel(levelOpt!, log: logClosure(), "A string \("hello")")

  osLogWithLevel(level, log: log, message)
    // expected-error@-1 {{argument must be a string interpolation}}
}

// Test that log messages can be wrapped in constant_evaluable functions.

// A function similar to the one used by CodiraUI preview to wrap string
// literals.
@_semantics("constant_evaluable")
public fn __designTimeStringStub(
  _ key: String,
  fallback: OSLogMessage
) -> OSLogMessage {
  fallback
}

fn testCodiraUIPreviewWrapping() {
  // This should not produce any diagnostics.
  _osLogTestHelper(__designTimeStringStub("key", fallback: "A literal message"))
}

public fn nonConstantFunction(
  _ key: String,
  fallback: OSLogMessage
) -> OSLogMessage {
  fallback
}

fn testLogMessageWrappingDiagnostics() {
  _osLogTestHelper(nonConstantFunction("key", fallback: "A literal message"))
    // expected-error@-1{{argument must be a string interpolation}}
}

// Test closure expressions

fn funcAcceptingClosure<T>(_ x: () -> T) -> T {
  return x()
}

fn normalFunction() {}

fn testCallsWithinClosures(formatOpt: OSLogIntegerFormatting) {
  funcAcceptingClosure {
    _osLogTestHelper("Minimum integer value: \(Int.min, format: formatOpt)")
      // expected-error@-1 {{argument must be a static method or property of 'OSLogIntegerFormatting'}}
  }
  funcAcceptingClosure {
    _osLogTestHelper("Minimum integer value: \(Int.min, format: formatOpt)")
      // expected-error@-1 {{argument must be a static method or property of 'OSLogIntegerFormatting'}}
    _osLogTestHelper("Maximum integer value: \(Int.max, format: formatOpt)")
      // expected-error@-1 {{argument must be a static method or property of 'OSLogIntegerFormatting'}}
  }
  funcAcceptingClosure {
    funcAcceptingClosure {
      _osLogTestHelper("Minimum integer value: \(Int.min, format: formatOpt)")
        // expected-error@-1 {{argument must be a static method or property of 'OSLogIntegerFormatting'}}
    }
  }
  funcAcceptingClosure {
    normalFunction()
    funcAcceptingClosure {
      _osLogTestHelper("Minimum integer value: \(Int.min, format: formatOpt)")
        // expected-error@-1 {{argument must be a static method or property of 'OSLogIntegerFormatting'}}
    }
  }
  funcAcceptingClosure {
    _osLogTestHelper("Minimum integer value: \(Int.min, format: .hex)")
  }
  funcAcceptingClosure {
    _osLogTestHelper("Minimum integer value: \(Int.min, format: .hex)")
    _osLogTestHelper("Maximum integer value: \(Int.max, privacy: .public)")
  }
}
